# recommendation_engine

./: .dockerignore  .env.example  .gitignore  API_V1.postman_collection.json  Dockerfile  Makefile  README.MD  docker-compose.yml  pyproject.toml
conf/: cert_private.pem  cert_public.pem
recommendation_engine/: asgi.py  main.py  settings.py
recommendation_engine/app/: providers.py
recommendation_engine/app/api/: providers.py  router.py
recommendation_engine/app/api/controllers/: auth.py  dummy.py  index.py  recommendation.py
recommendation_engine/app/auth/: access_token.py  exceptions.py  models.py  secure.py  service.py
recommendation_engine/app/core/: setup_logger.py
recommendation_engine/app/core/database/: collections.py  database_client_base.py  mongo_database.py  repository_base.py
recommendation_engine/app/recommendation/: algorithm.py  models.py  repository.py  types.py
scripts/: connect_to_mongo_db.py  create_recommendations.py  list_recommendations.py
tests/: conftest.py  test_dummy.py
tests/api/: conftest.py
tests/api/controllers/: test_auth_controller.py  test_index_controller.py  test_recommendation_controller.py
tests/auth/: test_access_token.py
tests/data/: recommendation_sequences_samples.py
tests/database/: test_database_client_base.py
tests/recommendation/: test_algorithm.py
